--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <video controls autoplay loop> //control이 표시되며 저절로 재생되고 반복재생된다. 
-   <source src="IMG_.mp4" type="video/mp4"> 
+   <source src="IMG_5386.mp4" type="video/mp4"> 
    IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
 </video>
 <h1>Hello World!</h1>
