--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+<meta charset="utf-8" name="viewport" content="width=device-width, user-scalable=no">
     <title>Hello World</title>
   </head>
   <body>
