--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-<meta charset="utf-8" name="viewport" content="width=device-width, user-scalable=no">
+
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
+  maximum-scale=1.0, minimum-scale=1.0">
     <title>Hello World</title>
   </head>
   <body>
