--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ video {
   </head>
   <body>
     <h1>Hello World</h1>
+<img src="BD41ADD3-0F59-4B31-BF08-DED53EEF8932.gif" />
     <video controls preload="metadata"> //control이 표시되며 저절로 재생되고 반복재생된다. 
    <source src="IMG_5386.mp4" type="video/mp4"> 
    IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
