--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ video {
   </head>
   <body>
     <h1>2019 크리스마스 파티 초대장</h1>
-    <video controls autoplay playsinline muted > //control이 표시되며 저절로 재생되고 반복재생된다. 
+    <video controls autoplay playsinline loop > //control이 표시되며 저절로 재생되고 반복재생된다. 
    <source src="IMG_5386.mp4" type="video/mp4"> 
    IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
 </video>
