--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ video {
    width:100%;
    height:auto; 
 }
+h1,h2 {
+ text-area:center;
+}
+body {
+ color:red;
+}
 </style>
 
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
@@ -14,7 +20,8 @@ video {
     <title>Hello World</title>
   </head>
   <body>
-    <h1>🔥2019 크리스마스 파티 초대장🔥</h1>
+    <h1>🔥2019 크리스마스 파티🔥</h1>
+<h2>~마지막 20대 for 주란~</h2>
     <video controls autoplay playsinline loop > //control이 표시되며 저절로 재생되고 반복재생된다. 
    <source src="IMG_5386.mp4" type="video/mp4"> 
    IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
