--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ video {
    height:auto; 
 }
 h1,h2 {
- text-area:center;
+ text-align:center;
+ color:white;
 }
 body {
- color:red;
+ background-color:red;
 }
 </style>
 
