--- a/19910611/index.html
+++ b/19910611/index.html
@@ -26,12 +26,25 @@
 		<title>2019크리스마스초대장</title>
 	</head>
 	<body>
-		<h1>🔥2019 <span>크리스마스</span> 파티🔥</h1>
-		<h2>~마지막 20대 for 영애~</h2>
-		<video controls autoplay muted playsinline loop>
-			<source src="../videos/19910611.mp4" type="video/mp4"> 
-			IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
-		</video>
-		<img src="../images/main.gif"/>
+		<div id="intro">
+			<h1>🔥2019 <span>크리스마스</span> 파티🔥</h1>
+			<h2>~마지막 20대 for 영애~</h2>
+			<video controls autoplay muted playsinline loop>
+				<source src="../videos/19910611.mp4" type="video/mp4"> 
+				IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
+			</video>
+		<div>
+		<div id="programs">
+			<h3>프로그램</h3>
+			<ul>
+				<dd>라탄 공장</dd>
+				<dd>케빈과 함께 보내는 영화감상</dd>
+				<dd>푸드와 즐기는 와인 타임</dd>
+			</ul>
+		</div>
+		<div id="main">
+			<img src="../images/main.gif"/>
+		</div>
+		
 	</body>
 </html>
