--- a/19910611/index.html
+++ b/19910611/index.html
@@ -9,13 +9,15 @@
 			}
 			h1,h2 {
 				text-align:center;
-				color:white;
 			}
 			h1 span{
 				color: green;
 			}
 			body {
 				background-color:red;
+			}
+			div {
+				color: white;
 			}
 			img {
 				width:100%;
@@ -27,7 +29,7 @@
 	</head>
 	<body>
 		<div id="intro">
-			<h1>🔥2019 <span>크리스마스</span> 파티🔥</h1>
+			<h1>🔥<span>2019</span> 크리스마스 <span>파티</span>🔥</h1>
 			<h2>~마지막 20대 for 영애~</h2>
 			<video controls autoplay muted playsinline loop>
 				<source src="../videos/19910611.mp4" type="video/mp4"> 
@@ -37,9 +39,12 @@
 		<div id="programs">
 			<h3>프로그램</h3>
 			<ul>
-				<dd>라탄 공장</dd>
-				<dd>케빈과 함께 보내는 영화감상</dd>
-				<dd>푸드와 즐기는 와인 타임</dd>
+				<dt>라탄 공장</dt>
+				<dd><img src="../images/latanhell.jpg"/></dd>
+				<dt>케빈과 함께 보내는 영화감상</dt>
+				<dd><img src="../images/homealone.jpg"/></dd>
+				<dt>푸드와 즐기는 와인 타임</dt>
+				<dd><img src="../images/winetime.jpg"/></dd>
 			</ul>
 		</div>
 		<div id="main">
