--- a/19910611/index.html
+++ b/19910611/index.html
@@ -36,16 +36,20 @@
 				IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다. 
 			</video>
 		<div>
+		<div id="place">
+			<h3>🏠 장소 🏠</h3>
+			<dt>계룡산 해피투게더</dt>
+			<dd>충남 공주시 반포면 동학사2로 12</dd>
+		</div>
 		<div id="programs">
-			<h3>프로그램</h3>
-			<ul>
-				<dt>라탄 공장</dt>
-				<dd><img src="../images/latanhell.jpg"/></dd>
-				<dt>케빈과 함께 보내는 영화감상</dt>
-				<dd><img src="../images/homealone.jpg"/></dd>
-				<dt>푸드와 즐기는 와인 타임</dt>
-				<dd><img src="../images/winetime.jpg"/></dd>
-			</ul>
+			<h3>📝 프로그램 📝</h3>
+			
+			<dt>🤹‍ 라탄 공장 취업하기..</dt>
+			<dd><img src="../images/latanhell.jpg"/></dd>
+			<dt>📽 케빈과 함께 보내는 영화감상..</dt>
+			<dd><img src="../images/homealone.jpg"/></dd>
+			<dt>🍷 푸드와 즐기는 와인 타임..</dt>
+			<dd><img src="../images/winetime.jpg"/></dd>
 		</div>
 		<div id="main">
 			<img src="../images/main.gif"/>
