--- a/19910611/index.html
+++ b/19910611/index.html
@@ -7,7 +7,7 @@
 				width:100%;
 				height:auto; 
 			}
-			h1,h2 {
+			h1,h2,h3 {
 				text-align:center;
 			}
 			h1 span{
@@ -18,6 +18,7 @@
 			}
 			div {
 				color: white;
+				margin-bottom : 50px;
 			}
 			img {
 				width:100%;
@@ -38,7 +39,7 @@
 		<div>
 		<div id="place">
 			<h3>🏠 장소 🏠</h3>
-			<dt>계룡산 해피투게더</dt>
+			<dt>🎄계룡산 해피투게더</dt>
 			<dd>충남 공주시 반포면 동학사2로 12</dd>
 		</div>
 		<div id="programs">
