--- a/19910611/index.html
+++ b/19910611/index.html
@@ -23,6 +23,9 @@
 			img {
 				width:100%;
 			}
+			dt {
+				font-weight: bold;
+			}
 		</style>
 
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no,  maximum-scale=1.0, minimum-scale=1.0">
@@ -39,7 +42,7 @@
 		<div>
 		<div id="place">
 			<h3>🏠 장소 🏠</h3>
-			<dt>🎄계룡산 해피투게더</dt>
+			<dt>🎄계룡산 해피투게더 산수유(202호)</dt>
 			<dd>충남 공주시 반포면 동학사2로 12</dd>
 		</div>
 		<div id="programs">
