--- a/19910701/index.html
+++ b/19910701/index.html
@@ -54,6 +54,9 @@
 			<dd><img src="../images/homealone.jpg"/></dd>
 			<dt>🍷 푸드와 즐기는 와인 타임..</dt>
 			<dd><img src="../images/winetime.jpg"/></dd>
+			<dt>✈ 함께하는 싱가포르 여행 계획..</dt>
+			<dd><img src="../images/singapore.jpg"/></dd>
+			<dt>그 외 많은 것들..</dt>
 		</div>
 		<div id="main">
 			<img src="../images/main.gif"/>
